src/objects/Business_Unit__c.object
<CustomObject>
    <description>An object to track the manage the business units in Lexitas overall, and by specific job function.</description>
    <fields>
        <fullName>BU_Invoicing__c</fullName>
        <label>BU - Invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Production__c</fullName>
        <label>BU - Production</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Scheduling__c</fullName>
        <label>BU - Scheduling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Video__c</fullName>
        <label>BU - Video</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduling_Email_Alias__c</fullName>
        <label>Scheduling Email Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Scheduling_Phone_Number__c</fullName>
        <label>Scheduling Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Business Unit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>